Fix z-index attributes

--- a/client/app/styles/main.css
+++ b/client/app/styles/main.css
@@ -58,7 +58,7 @@ body {
 #messageConsole {
   width: 200px;
   position: fixed;
-  z-index: 99;
+  z-index: 10;
   top: 20px;
   padding-left: 10px;
   padding-right: 10px;
@@ -76,7 +76,7 @@ body {
 #LogoBox, #TitleBox, #UserBox, #LogoBoxHomepage, #TitleBoxHomepage, #UserBoxHomepage {
   position: relative;
   height: 200px;
-  z-index: 99;
+  z-index: 10;
   margin-left: 20px;
   margin-right: 20px;
 }
@@ -168,7 +168,7 @@ h3 {
 .pending-requests {
   position: fixed;
   top: 100px;
-  z-index: 99;
+  z-index: 10;
   width: 400px;
   margin-left: -200px;
   left: 50%;
@@ -194,7 +194,7 @@ h3 {
 @media (max-width: 550px) {
   .modal.not-anonymous-question {
     top: 120px;
-    z-index: 99;
+    z-index: 10;
   }
   .modal.not-anonymous-question h3 {
     font-size: 18px;
